@@ -55,6 +55,7 @@
 	- rpmns: refactor .arch suffix table from rpmts.c -> rpmns.c.
 	- rpmns: support for Requires: name.arch (#235755).
 	- rpmns: parse namespace(...) probe markers.
+	- rpmns: macro expand all dependency names.
 
 4.4.7 -> 4.4.8:
 	- start rpm-4.4.8 development.
